--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
   min-width: 1920px;
   min-height: 1080px;
   position: relative;
-  overflow hidden;
+  overflow: hidden;
 }
 
 .element-AQI-vs .group {
