--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@
 }
 
 .element-AQI-vs .internal-AQI {
-  display: inline-flex;
+  display: w-full flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
